<resources>
    <string name="app_name">SuperbToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adding_task">Adding Task</string>
    <string name="what_to_do">What to do?</string>
    <string name="pick_dead_line">Pick dead line</string>
    <string name="to_show_calendar">to show calendar</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="time_here">Time here</string>
    <string name="textview">TextView</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update_task">Update Task</string>
    <string name="title">Title</string>
    <string name="time_left">Time Left</string>
    <string name="superb_note">Superb Note</string>
    <string name="id">ID</string>
    <string name="congrats">You have already done this task! Congrats!</string>
    <string name="search">Search</string>
    <string name="delete_all">Delete all</string>
    <string name="your_task_title">Your task title</string>
    <string name="sort">Sort</string>
    <string name="sortByDate">Sort By Date</string>
    <string name="sortByTitle">Sort By Title</string>
    <string name="home">Home</string>
    <string name="done">Done</string>
    <string name="task_list">Task List</string>
    <string name="add_a_task">Add a task</string>
    <string name="last_updated">last updated</string>
    <string name="alarm">alarm</string>
    <string name="calendar">Calendar</string>
    <string name="weekly">Weekly</string>
    <string name="back">Back</string>
    <string name="next">Forward</string>
    <string name="feb_2022">Feb 2022</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="checkbox">CheckBox</string>
    <string name="_18">18</string>
    <string name="add_task">Add task</string>
    <string name="task_time">Task time</string>
    <string name="fill_the_details_below_to_add_a_task_into_your_todo">Fill the details below to add a task</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task description</string>
    <string name="task_date">Task date</string>
    <string name="your_task_time">Your task time</string>
    <string name="your_task_description">Your task description</string>
    <string name="your_task_date">Your task date</string>
    <string name="update_your_task">Update your task</string>
    <string name="fill_the_details_below_to_update_a_task_into_your_todo">Fill the details below to update a task into your TODO</string>
    <string name="emptystuff">emptyStuff</string>
    <string name="it_s_kinda_sad_to_be_a_boring_day_without_task">It\'s kinda sad to be a boring day without task :(</string>
    <string name="september">September</string>
    <string name="time_out">TIMED OUT! FINISH THE TASK!</string>
    <string name="lazy">TIME OUT</string>
    <string name="on_progress">On Progress</string>
    <string name="you_have_so_many_tasks_left_try_to_finish_it_all">Uh oh!? The number of finished tasks is… zero?!</string>
    <string name="congrats_you_finish_all_of_them">Congrats! You are free, for now!</string>
    <string name="today">Today</string>
    <string name="events">3 Events</string>
</resources>