<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    android:backgroundTint="@color/white_bg"
    android:padding="30dp"
    tools:context=".fragments.add.AddingFragment">

    <EditText
        android:id="@+id/Title_editTxt"
        android:layout_width="262dp"
        android:layout_height="69dp"
        android:autofillHints="true"
        android:background="@drawable/layout_bg"
        android:ems="10"
        android:hint="@string/what_to_do"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/datePickerBtn"
        android:layout_width="113dp"
        android:layout_height="53dp"
        android:layout_below="@+id/Title_editTxt"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_bg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_editTxt">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:contentDescription="@string/to_show_calendar"
            android:foregroundGravity="center"
            android:src="@drawable/ic_calendar" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtn"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/layout_bg"
        android:backgroundTint="#49cb8f"
        android:clickable="true"
        android:contentDescription="@string/adding_task"
        android:focusable="true"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/layout_bg"
        android:backgroundTint="#fe171d"
        android:clickable="true"
        android:contentDescription="@string/adding_task"
        android:focusable="true"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title_editTxt"
        android:layout_marginTop="20dp"
        android:text="@string/time_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerBtn" />

    <TextView
        android:id="@+id/specificTimeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/time_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTxt" />


</androidx.constraintlayout.widget.ConstraintLayout>