<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp"
    android:backgroundTint="@color/done_layout_bg"
    app:cardCornerRadius="10dp"
    app:contentPadding="10dp"
    android:id="@+id/taskLayout"
    android:layout_height="150dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/day"
                android:text="Tue"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:text="@string/_18"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/lime_A200" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/month"
                android:layout_gravity="center"
                android:text="Nov"
                android:textSize="18sp"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="Full house"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:id="@+id/titleTxt"
                    android:textColor="@color/white"/>

                <CheckBox
                    android:id="@+id/checkBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    />

                <ImageView
                    android:id="@+id/imgAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_access_alarm_24"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/time_here"
                android:id="@+id/timeTxt"
                android:textSize="14sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/time_left"
                android:id="@+id/timeLeftTxt"
                android:textSize="14sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/time_left"
                android:id="@+id/lastUpdate"
                android:textSize="14sp"
                android:textColor="@color/white"/>


        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>